# kiran-menu

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  applet.c  com.unikylin.StartMenuS.xml  config.h.in  kiran-menu-applet-button.c  kiran-menu-applet.c  kiran-menu-window.c  kiran-power-button.h  kiran-power-menu.c  kiran-start-menu-app.c  kiran-start-menu-app.h  kiran-start-menu.c  main.c  meson.build
data/: CMakeLists.txt  applet.css  applet.gresource.xml  com.kylinsec.Kiran.MenuCategory.xml  com.kylinsec.kiran.startmenu.gschema.xml.in  com.kylinsec.kiran.startmenu.profile.gschema.xml  com.kylinsec.kiran.taskbar.gschema.xml.in  com.kylinsec.kiran.tray.gschema.xml.in  com.kylinsec.kiran.workspace-switcher.gschema.xml.in  com.unikylin.Kiran.StartMenu.gschema.xml.in  com.unikylin.Kiran.StartMenu.profile.gschema.xml  com.unikylin.Kiran.TaskBar.gschema.xml.in  com.unikylin.Kiran.Tray.gschema.xml.in  com.unikylin.Kiran.WorkspaceSwitcher.gschema.xml.in  kiran-applet.pc.in  menu-menu.ui.xml  menu.css  menu.gresource.xml  menu.ui.xml  org.kde.StatusNotifierHost.xml  org.kde.StatusNotifierItem.xml  org.kde.StatusNotifierManager.xml  org.kde.StatusNotifierWatcher.xml  org.kiran.panel.applet.KiranAppletFactory.service.in  org.mate.panel.KiranApplet.mate-panel-applet.in  org.mate.panel.KiranMenuApplet.mate-panel-applet.in  org.mate.panel.applet.KiranAppletFactory.service.in  org.mate.panel.applet.KiranMenuAppletFactory.service.in  tasklist-menu.ui.xml  window-snapshot.ui.xml  workspace-applet-window.ui.xml  workspace-switcher-menu.ui.xml
icons/: CMakeLists.txt
lib/: CMakeLists.txt  app-manager.cpp  app-manager.h  app.cpp  app.h  base.h  category-node.cpp  category-node.h  category-reader.cpp  category-reader.h  category-writer.cpp  category-writer.h  category.cpp  category.h  com.unikylin.Kiran.MenuCategory.xml  com.unikylin.Kiran.StartMenu.gschema.xml.in  com.unikylin.Kiran.StartMenu.service.in  com.unikylin.Kiran.TaskBar.gschema.xml.in  common.cpp  common.h  core_worker.cpp  core_worker.h  helper.c  helper.cpp  helper.h  kiran-app.c  kiran-app.h  kiran-category-node.c  kiran-category-node.h  kiran-category-reader.c  kiran-category-reader.h  kiran-category-writer.c  kiran-category-writer.h  kiran-category.c  kiran-category.h  kiran-menu-app.c  kiran-menu-app.h  kiran-menu-based.c  kiran-menu-based.h  kiran-menu-category.c  (+50 more)
po/: CMakeLists.txt  POTFILES.in  bo_CN.po  kk_KG.po  kk_KZ.po  mn_MN.po  ug_CN.po  zh_CN.po
src/: CMakeLists.txt  applet.c  applet.cpp  com.unikylin.Kiran.StartMenu.gschema.xml.in  config.h.in  global.h  kiran-accounts-manager.c  kiran-accounts-user.c  kiran-app-button.c  kiran-app-button.h  kiran-app-context-menu.cpp  kiran-app-context-menu.h  kiran-app-item.c  kiran-app-item.h  kiran-app-wrapper.c  kiran-app-wrapper.h  kiran-applet-button.cpp  kiran-category-item.c  kiran-category-item.h  kiran-expand-button.c  kiran-expand-button.h  kiran-helper.cpp  kiran-helper.h  kiran-menu-app-item.cpp  kiran-menu-app-item.h  kiran-menu-app-launcher.cpp  kiran-menu-app-launcher.h  kiran-menu-applet-button.c  kiran-menu-applet-button.cpp  kiran-menu-applet-button.h  kiran-menu-avatar-widget.cpp  kiran-menu-avatar-widget.h  kiran-menu-category-item.cpp  kiran-menu-category-item.h  kiran-menu-list-item.cpp  kiran-menu-list-item.h  kiran-menu-power-button.cpp  kiran-menu-power-button.h  kiran-menu-power-menu.cpp  kiran-menu-power-menu.h  (+113 more)
src/common/: global.h  kiran-applet-button.cpp  kiran-applet-button.h  kiran-helper.cpp  kiran-helper.h  kiran-opacity-menu.cpp  kiran-opacity-menu.h  kiran-power.cpp  kiran-power.h  kiran-search-entry.cpp  kiran-search-entry.h  kiran-thumbnail-widget.cpp  kiran-thumbnail-widget.h  window-thumbnail-widget.cpp  window-thumbnail-widget.h  workarea-monitor.cpp  workarea-monitor.h
src/menu/: kiran-accounts-manager.cpp  kiran-accounts-manager.h  kiran-accounts-user.cpp  kiran-accounts-user.h  menu-app-item.cpp  menu-app-item.h  menu-app-launcher-button.cpp  menu-app-launcher-button.h  menu-applet-button.cpp  menu-applet-button.h  menu-applet-window.cpp  menu-applet-window.h  menu-applet.cpp  menu-applet.h  menu-apps-container.cpp  menu-apps-container.h  menu-avatar-widget.cpp  menu-avatar-widget.h  menu-category-item.cpp  menu-category-item.h  menu-list-item-widget.cpp  menu-list-item-widget.h  menu-new-apps-container.cpp  menu-new-apps-container.h  menu-power-button.cpp  menu-power-button.h  menu-power-dialog.cpp  menu-power-dialog.h  menu-power-menu.cpp  menu-power-menu.h  menu-profile.cpp  menu-profile.h  menu-user-info.cpp  menu-user-info.h  recent-file-item.cpp  recent-file-item.h  recent-files-list-box.cpp  recent-files-list-box.h  recent-files-widget.cpp  recent-files-widget.h
src/showdesktop/: showdesktop-applet-button.cpp  showdesktop-applet-button.h  showdesktop-applet.cpp  showdesktop-applet.h
src/start-menu/: com.unikylin.Kiran.StartMenu.gschema.xml.in  com.unikylin.StartMenuS.xml  kiran-app-category.c  kiran-app-category.h  kiran-app-favorite.c  kiran-app-favorite.h  kiran-app-info.c  kiran-app-info.h  kiran-app-search.c  kiran-app-search.h  kiran-app-system.c  kiran-app-system.h  kiran-app-usage.c  kiran-app.c  kiran-app.h  kiran-menu-app.c  kiran-menu-app.h  kiran-menu-based.c  kiran-menu-based.h  kiran-menu-category.c  kiran-menu-category.h  kiran-menu-common.h  kiran-menu-favorite.c  kiran-menu-favorite.h  kiran-menu-search.c  kiran-menu-search.h  kiran-menu-skeleton.c  kiran-menu-skeleton.h  kiran-menu-system.c  kiran-menu-system.h  kiran-menu-usage.c  kiran-menu-usage.h  kiran-skeleton.c  kiran-skeleton.h  kiran-start-menu-app.c  kiran-start-menu.c  (+4 more)
test/: CMakeLists.txt  kiran-tray-test.c  meson.build  test-all-apps.c  test-all-apps.cpp  test-app-category.c  test-app-category.cpp  test-app-favorite.c  test-app-favorite.cpp  test-app-frequent.c  test-app-frequent.cpp  test-app-search.c  test-app-search.cpp  test-display.cpp  test-launch-action.cpp  test-menu-common.h  test-menu-signal.c  test-menu-signal.cpp  test-menu-unit.c  test-menu-unit.cpp  test-start-menu.c  test-taskbar-signal.cpp  test-unit.cpp
(+78 files in other folders)
